#116 Got rid of Path.of() from Java 11 and replaced with Paths.get() from Java 8