@@ -20,6 +20,7 @@ import java.awt.event.ItemListener;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 import java.util.logging.Level;
@@ -405,9 +406,9 @@ public class EclipseJavaFormatterOptionsPanel extends AbstractFormatterOptionsPa
 	}
 
 	private void loadEclipseFormatterFileForPreview(String formatterFile, String activeProfile) {
-		Path formatterFilePath = Path.of(formatterFile);
+		Path formatterFilePath = Paths.get(formatterFile);
 		if (!formatterFilePath.isAbsolute() && project != null) {
-			formatterFilePath = Path.of(project.getProjectDirectory().getPath()).resolve(formatterFilePath);
+			formatterFilePath = Paths.get(project.getProjectDirectory().getPath()).resolve(formatterFilePath);
 		}
 
 		formatterLocField.setText(formatterFile);
@@ -484,9 +485,9 @@ public class EclipseJavaFormatterOptionsPanel extends AbstractFormatterOptionsPa
 			// use configuration from .settings
 			return true;
 		} else if (StringUtils.isNotBlank(fileName) && project != null) {
-			Path formatterFilePath = Path.of(fileName);
+			Path formatterFilePath = Paths.get(fileName);
 			if (!formatterFilePath.isAbsolute()) {
-				fileName = Path.of(project.getProjectDirectory().getPath()).resolve(formatterFilePath).toString();
+				fileName = Paths.get(project.getProjectDirectory().getPath()).resolve(formatterFilePath).toString();
 			}
 		}
 
